# ProyectoProgaIII

./: CMakeLists.txt  Progra.qmd  README.md  main.cpp
Proyecto #1 - Plataforma Streaming/: Makefile
Proyecto #1 - Plataforma Streaming/src/: IndiceInvertido.cpp  IndiceInvertido.h  LectorCSV.cpp  LectorCSV.h  Pelicula.cpp  Pelicula.h  Plataforma.cpp  Plataforma.h  Trie.cpp  Trie.h  main.cc
models/: Movie.cpp  Movie.h
systems/: RankingSystem.cpp  RecommendationSystem.cpp  RecommendationSystem.h
utils/: CSVReader.cpp  CSVReader.h  DataCleaner.cpp  DataCleaner.h  Tokenizar.cpp  Tokenizar.h
